# gestionale_imprese

./: .gitignore  Cargo.toml  diesel.toml  docker-compose.yml
.cargo/: config.toml
crates/backend/: Cargo.toml
crates/backend/src/: entities.rs  lib.rs  main.rs  models.rs  query_states.rs  remove_state.rs  request_states.rs  response_states.rs
crates/backend/src/auth/: auth_layer.rs  jwt.rs  mod.rs
crates/backend/src/handlers/: add_handlers.rs  get_handlers.rs  mod.rs  modify_handlers.rs  remove_handlers.rs
crates/backend/src/utils/: api_error.rs  api_utils.rs  mod.rs
crates/prisma/: Cargo.toml  schema.prisma
crates/prisma-cli/: Cargo.toml
crates/prisma/src/: lib.rs
migrations/2024-06-15-090608_create_user/: up.sql
migrations/2024-06-18-083742_create_gestionale/: down.sql  up.sql
migrations/2024-06-18-090147_create_gestionale/: down.sql  up.sql
migrations/2024-06-18-103155_create_gestionale/: down.sql  up.sql
src/: lib.rs  main.rs  migration.rs  models.rs  query_states.rs  remove_state.rs  request_states.rs  response_states.rs  schema.rs  subschemas.rs  utils.rs
src/handlers/: add_handlers.rs  get_handlers.rs  modify_handlers.rs  remove_handlers.rs
