[workspace]
members = ["crates/backend", "crates/prisma", "crates/prisma-cli"]
resolver = "2"
exclude = ["index.node"]

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
  "postgresql",
  "tokio",
  "migrations",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"