[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prisma"

[features]
postgres = ["prisma-client-rust-cli/postgresql"]
test = ["prisma-client-rust-cli/mocking"]

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [ "migrations"] }